--- a/src/test/resources/contracts/set-db-message-contract.yaml
+++ b/src/test/resources/contracts/set-db-message-contract.yaml
@@ -9,4 +9,27 @@ request:
 response:
   status: 200
   body: "Message updated successfully!"
-
+---
+request:
+  method: POST
+  url: /set-db-message
+  body:
+    message: "Baza de date aleasa: "
+  headers:
+    Content-Type: application/json
+    id: ""
+response:
+  status: 401
+  body: "Authorization failed"
+---
+request:
+  method: POST
+  url: /set-db-message
+  body:
+    message: "Baza de date aleasa: "
+  headers:
+    Content-Type: application/json
+    id: "DUMMY"
+response:
+  status: 401
+  body: "Authorization failed"
